2012-05-31  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/unix/sysv/linux/i386/bits/mman.h: Removed.
	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/mman.h: This.

	* sysdeps/unix/sysv/linux/x86_64/bits/msq.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/msq.h: This.
	* sysdeps/unix/sysv/linux/x86_64/bits/sem.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/sem.h: This.
	* sysdeps/unix/sysv/linux/x86_64/bits/shm.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/shm.h: This.

	* sysdeps/unix/sysv/linux/x86_64/bits/ipctypes.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/ipctypes.h: This.

	* sysdeps/unix/sysv/linux/x86_64/bits/epoll.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/epoll.h: This.

	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Removed.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/fcntl.h: This.

	* sysdeps/unix/sysv/linux/i386/bits/environments.h: Removed.
	* sysdeps/unix/sysv/linux/x86_64/bits/environments.h: Renamed
	to ...
	* sysdeps/unix/sysv/linux/x86/bits/environments.h: This.

	* sysdeps/unix/sysv/linux/i386/bits/a.out.h: Removed.
	* sysdeps/unix/sysv/linux/x86_64/bits/a.out.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/a.out.h: This.

	* sysdeps/unix/sysv/linux/i386/sys/elf.h: Error when compiling
	for x86-64.
	* sysdeps/unix/sysv/linux/i386/sys/vm86.h: Likewise.

2012-05-31  Joseph Myers  <joseph@codesourcery.com>

	* math/math.h (M_El): Use two more decimal places.
	(M_LOG2El): Likewise.
	(M_LOG10El): Likewise.
	(M_LN2l): Likewise.
	(M_LN10l): Likewise.
	(M_PIl): Likewise.
	(M_PI_2l): Likewise.
	(M_PI_4l): Likewise.
	(M_1_PIl): Likewise.
	(M_2_PIl): Likewise.
	(M_2_SQRTPIl): Likewise.
	(M_SQRT2l): Likewise.
	(M_SQRT1_2l): Likewise.

2012-05-31  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/memcpy.S: Use fsrc2 to move 64-bit
	values between float registers.