@@ -1,4 +1,4 @@
-/* Copyright (C) 1996, 2000, 2002, 2009 Free Software Foundation, Inc.
+/* Copyright (C) 1996-2012 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -133,45 +133,48 @@ outl_p (unsigned int __value, unsigned short int __port)
 }
 
 static __inline void
-insb (unsigned short int __port, void *addr, unsigned long int __count)
+insb (unsigned short int __port, void *__addr, unsigned long int __count)
 {
-  __asm__ __volatile__ ("cld ; rep ; insb":"=D" (addr), "=c" (__count)
-			:"d" (__port), "0" (addr), "1" (__count));
+  __asm__ __volatile__ ("cld ; rep ; insb":"=D" (__addr), "=c" (__count)
+			:"d" (__port), "0" (__addr), "1" (__count));
 }
 
 static __inline void
-insw (unsigned short int __port, void *addr, unsigned long int __count)
+insw (unsigned short int __port, void *__addr, unsigned long int __count)
 {
-  __asm__ __volatile__ ("cld ; rep ; insw":"=D" (addr), "=c" (__count)
-			:"d" (__port), "0" (addr), "1" (__count));
+  __asm__ __volatile__ ("cld ; rep ; insw":"=D" (__addr), "=c" (__count)
+			:"d" (__port), "0" (__addr), "1" (__count));
 }
 
 static __inline void
-insl (unsigned short int __port, void *addr, unsigned long int __count)
+insl (unsigned short int __port, void *__addr, unsigned long int __count)
 {
-  __asm__ __volatile__ ("cld ; rep ; insl":"=D" (addr), "=c" (__count)
-			:"d" (__port), "0" (addr), "1" (__count));
+  __asm__ __volatile__ ("cld ; rep ; insl":"=D" (__addr), "=c" (__count)
+			:"d" (__port), "0" (__addr), "1" (__count));
 }
 
 static __inline void
-outsb (unsigned short int __port, const void *addr, unsigned long int __count)
+outsb (unsigned short int __port, const void *__addr,
+       unsigned long int __count)
 {
-  __asm__ __volatile__ ("cld ; rep ; outsb":"=S" (addr), "=c" (__count)
-			:"d" (__port), "0" (addr), "1" (__count));
+  __asm__ __volatile__ ("cld ; rep ; outsb":"=S" (__addr), "=c" (__count)
+			:"d" (__port), "0" (__addr), "1" (__count));
 }
 
 static __inline void
-outsw (unsigned short int __port, const void *addr, unsigned long int __count)
+outsw (unsigned short int __port, const void *__addr,
+       unsigned long int __count)
 {
-  __asm__ __volatile__ ("cld ; rep ; outsw":"=S" (addr), "=c" (__count)
-  			:"d" (__port), "0" (addr), "1" (__count));
+  __asm__ __volatile__ ("cld ; rep ; outsw":"=S" (____addr), "=c" (__count)
+  			:"d" (__port), "0" (__addr), "1" (__count));
 }
 
 static __inline void
-outsl (unsigned short int __port, const void *addr, unsigned long int __count)
+outsl (unsigned short int __port, const void *__addr,
+       unsigned long int __count)
 {
-  __asm__ __volatile__ ("cld ; rep ; outsl":"=S" (addr), "=c" (__count)
-			:"d" (__port), "0" (addr), "1" (__count));
+  __asm__ __volatile__ ("cld ; rep ; outsl":"=S" (__addr), "=c" (__count)
+			:"d" (__port), "0" (__addr), "1" (__count));
 }
 
 #endif	/* GNU C */
